--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.18.13",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.10",
+    "@babel/polyfill": "^7.12.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
@@ -45,5 +45,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
