--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.18.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
